--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>   
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>My Website</title>
+    </head>
+    <body>
+        <h1>Sri Pujitha</h1>
+        <h2>I'm a develper</h2>
+        
+    
+        <hr />
+        <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+        <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
+        <h3> <a href="./public/birthday-invite.html">Birthday Invoite Project</a></h3>
+        <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+        <hr/>
+        <a href="./public/about.html">About Me</a>
+        <a href="./public/contact.html"> Contact Me</a>
+    </body>
+   
+</html>                                                                                                                                                                                                                                <html.<                                                                                           <!-- TODO 1: Create the HTML Boilerplate -->
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
